--- a/static/css/base.css
+++ b/static/css/base.css
@@ -286,3 +286,24 @@ body {
     border: 1px solid #ced4da;
     font-size: 1rem;
 }
+
+/* Media Queries */
+
+/* sm devices for (small screens, 380px and below) */
+
+@media screen and (max-width: 380px) {
+    .brand-name {
+        font-size: 0.7rem;
+    }
+
+    .navbar-logo {
+    height: 26px;
+    width: auto;
+    }
+
+    /* Service Images */
+    .sm-service-image {
+        max-width: 45px;
+        height: auto;
+    }
+}
